test/files/neg/t2078.check
<<<<<<< HEAD
t2078.scala:2: error: contravariant type S occurs in covariant position in type => java.lang.Object{val x: S} of value f
=======
t2078.scala:2: error: contravariant type S occurs in covariant position in type => Object{val x: S} of value f
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
  val f  = new { val x = y }
      ^
one error found
